--- a/campaign-tracker.html
+++ b/campaign-tracker.html
@@ -448,7 +448,7 @@
     ──────────────────────────────────────────────────────────────────── */
     const GITHUB_USER   = 'IlexLycalopex';
     const GITHUB_REPO   = 'SpellTome';
-    const GITHUB_BRANCH = 'main';
+    const GITHUB_BRANCH = 'EnhancedV3';
     const SESSIONS_PATH = 'playlog';
 
     const API_BASE = `https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}`;
