--- a/campaign-tracker.html
+++ b/campaign-tracker.html
@@ -618,13 +618,7 @@
       // D&D / 5e / OSR — crossed swords
       if (/d&d|dnd|5e|pathfinder|osr|fantasy|dungeon/i.test(r)) {
         return `<span class="ruleset-icon" title="${ruleset}"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
-          <line x1="3" y1="21" x2="21" y2="3"/>
-          <path d="M15 3l6 0 0 6"/>
-          <path d="M3 21l-3 0 0-6"/>
-          <line x1="6.5" y1="17.5" x2="17.5" y2="6.5"/>
-          <line x1="3" y1="3" x2="21" y2="21"/>
-          <path d="M3 9l0-6 6 0"/>
-          <path d="M21 15l0 6-6 0"/>
+          <path d="M12 3 L20 8 L20 14 Q20 20 12 22 Q4 20 4 14 L4 8 Z"/>
         </svg></span>`;
       }
       // Call of Cthulhu / horror / Lovecraft — tentacle eye
