--- a/index.html
+++ b/index.html
@@ -292,6 +292,11 @@ body::before {
       <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="3" width="8" height="8" rx="1.5"/><rect x="13" y="3" width="8" height="8" rx="1.5"/><rect x="3" y="13" width="8" height="8" rx="1.5"/><rect x="13" y="13" width="8" height="8" rx="1.5"/><circle cx="7" cy="7" r="1" fill="currentColor" stroke="none"/><circle cx="17" cy="7" r="1" fill="currentColor" stroke="none"/><circle cx="7" cy="17" r="1" fill="currentColor" stroke="none"/><circle cx="17" cy="17" r="1" fill="currentColor" stroke="none"/></svg>
       &nbsp;Dice Roller
     </a>
+      <span class="nav-section-label">Campaigns</span>
+      <a href="campaign-tracker.html" class="nav-item">
+        <svg class="ni" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><polyline points="10 9 9 9 8 9"/></svg>
+        &nbsp;Campaign Chronicle
+      </a>
   </div>
 </nav>
 
@@ -535,6 +540,39 @@ body::before {
             <div class="card-foot">Open tool <span class="c-arrow">&#x2192;</span></div>
           </div>
         </a>
+
+
+      <p class="section-eyebrow" style="margin-top:52px;">Campaigns</p>
+      <div class="tool-grid">
+
+        <!-- CAMPAIGN CHRONICLE -->
+        <a href="campaign-tracker.html" class="tool-card" style="--accent:#3a7abd;">
+          <div class="card-stripe"></div>
+          <div class="card-inner">
+            <div class="card-top">
+              <div class="card-glyph" style="color:#3a7abd;">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                  <polyline points="14 2 14 8 20 8"/>
+                  <line x1="16" y1="13" x2="8" y2="13"/>
+                  <line x1="16" y1="17" x2="8" y2="17"/>
+                  <polyline points="10 9 9 9 8 9"/>
+                </svg>
+              </div>
+              <span class="card-name">Campaign Chronicle</span>
+            </div>
+            <p class="card-desc">Track your campaign session by session. Log party members, NPCs, locations, plot threads, and session notes in a single persistent record. Everything saves locally in the browser.</p>
+            <div class="card-pills">
+              <span class="c-pill" style="color:#3a7abd;border:1px solid rgba(58,122,189,0.3);background:rgba(58,122,189,0.08);">Session Logs</span>
+              <span class="c-pill" style="color:#3a7abd;border:1px solid rgba(58,122,189,0.3);background:rgba(58,122,189,0.08);">Party Tracker</span>
+              <span class="c-pill" style="color:#3a7abd;border:1px solid rgba(58,122,189,0.3);background:rgba(58,122,189,0.08);">NPCs &amp; Lore</span>
+              <span class="c-pill" style="color:#3a7abd;border:1px solid rgba(58,122,189,0.3);background:rgba(58,122,189,0.08);">Local Storage</span>
+            </div>
+            <div class="card-foot">Open tool <span class="c-arrow">&#x2192;</span></div>
+          </div>
+        </a>
+
+      </div>
 
       </div>
     </div>
